@@ -1,3 +1,8 @@
+19 May 2009
+
+* New window option: monitor-content. Searches for a string in a window and if
+  it matches, highlight the status line.
+
 18 May 2009
 
 * main-horizontal layout and main-pane-height option to match vertical.
@@ -1270,7 +1275,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.292 2009-05-18 22:17:24 nicm Exp $
+$Id: CHANGES,v 1.293 2009-05-19 13:32:55 tcunha Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
